cmake_minimum_required(VERSION 3.15)
project(practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice main.cpp)
add_executable(a acwing103.cpp)
add_executable(b acwing104.cpp)
add_executable(c acwing108.cpp)
add_executable(d acwing109.cpp)
add_executable(e acwing110.cpp)
add_executable(f acwing2.cpp)