cmake_minimum_required(VERSION 3.15)
project(practice)

set(CMAKE_CXX_STANDARD 14)

add_executable(practice main.cpp)
add_executable(a acwing103.cpp)
add_executable(b acwing104.cpp)
add_executable(c acwing108.cpp)
add_executable(d acwing109.cpp)
add_executable(e acwing110.cpp)
add_executable(f acwing2.cpp)
add_executable(g mappractice.cpp)
add_executable(h acwing111.cpp)
add_executable(i acwing112.cpp)
add_executable(j acwing116.cpp)
add_executable(k acwing117.cpp)
add_executable(l pointerpractice.cpp)
add_executable(m acwing118.cpp)